@@ -81,6 +81,22 @@ install(TARGETS PothosQtColorPicker
 list(APPEND Pothos_LIBRARIES PothosQtColorPicker)
 
 ########################################################################
+# Bundle icon resources with executable
+########################################################################
+set(CMAKE_AUTORCC ON)
+file(GLOB ICONS ${CMAKE_CURRENT_SOURCE_DIR}/icons/*.png)
+set(RESOURCES_QRC ${CMAKE_CURRENT_BINARY_DIR}/resources.qrc)
+file(WRITE ${RESOURCES_QRC} "<!DOCTYPE RCC><RCC version='1.0'>\n")
+file(APPEND ${RESOURCES_QRC} "<qresource>\n")
+foreach(ICON ${ICONS})
+    get_filename_component(NAME ${ICON} NAME)
+    file(APPEND ${RESOURCES_QRC} "<file alias='icons/${NAME}'>${ICON}</file>\n")
+endforeach(ICON)
+file(APPEND ${RESOURCES_QRC} "</qresource>\n")
+file(APPEND ${RESOURCES_QRC} "</RCC>\n")
+list(APPEND SOURCES ${RESOURCES_QRC})
+
+########################################################################
 # Resource file - adds an icon to Pothos GUI executable
 ########################################################################
 if (WIN32)
@@ -224,12 +240,6 @@ install(
     TARGETS PothosGui
     BUNDLE DESTINATION ${BUNDLE_DESTINATION}
     RUNTIME DESTINATION bin
-    COMPONENT pothos_gui
-)
-
-install(
-    DIRECTORY icons
-    DESTINATION share/Pothos
     COMPONENT pothos_gui
 )
 
