@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.4.1 (pending)
 ==========================
 
+- Replace icon installation with Qt resource bundling system
 - Support commitRequested() return hotkey in ComboBox edit widget
 
 Release 0.4.0 (2016-08-02)
